--- a/package.json
+++ b/package.json
@@ -6,20 +6,39 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "slicemachine": "start-slicemachine"
   },
   "dependencies": {
+    "@prismicio/client": "^7.0.1",
+    "@prismicio/helpers": "^2.3.9",
+    "@prismicio/next": "^1.2.1",
+    "@prismicio/react": "^2.6.2",
     "@types/node": "20.2.3",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "eslint": "8.41.0",
-    "eslint-config-next": "13.4.3",
-    "next": "13.4.3",
+    "eslint-config-next": "13.4.4",
+    "next": "13.4.4",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "@commitlint/config-conventional": "^17.6.3",
+    "@prismicio/types": "^0.2.7",
+    "@rocketseat/eslint-config": "^1.2.0",
+    "@slicemachine/adapter-next": "^0.1.3",
+    "cz-conventional-changelog": "^3.3.0",
+    "prettier-plugin-tailwindcss": "^0.3.0",
+    "slice-machine-ui": "^1.0.3"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
