--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,19 +2,23 @@
   "root": true,
   "parser": "@typescript-eslint/parser",
   "extends": [
-    "@rocketseat/eslint-config/react",
     "next/core-web-vitals",
-    "eslint:recommended",
+    "@rocketseat/eslint-config/react",
     "plugin:@typescript-eslint/eslint-recommended",
-    "plugin:@typescript-eslint/recommended"
-    // "prettier"
+    "plugin:@typescript-eslint/recommended",
+    "prettier"
   ],
   "plugins": [
-    "@typescript-eslint"
-    // "prettier"
+    "@typescript-eslint",
+    "prettier"
   ],
   "rules": {
-    "no-console": 1,       // Means warning
-    "prettier/prettier": 2 // Means error
+    "no-console": 1,
+    "prettier/prettier": 2,
+    "semi": [
+      "error",
+      "never"
+    ],
+    "no-unused-vars": "warn"
   }
 }
