--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,9 @@
     "paths": {
       "@/*": [
         "./src/*"
+      ],
+      "@core-ui/*": [
+        "./src/components/@core/*"
       ]
     }
   },
