feat(comp): create navbar component

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,9 @@
       ],
       "@core-ui/*": [
         "./src/components/@core/*"
+      ],
+      "@components/*": [
+        "./src/components/*"
       ]
     }
   },
