--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-dom": "18.2.0",
     "tailwind-merge": "^1.12.0",
     "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "zustand": "^4.3.8"
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^17.6.3",
@@ -38,7 +39,7 @@
     "@slicemachine/adapter-next": "^0.1.3",
     "cz-conventional-changelog": "^3.3.0",
     "prettier-plugin-tailwindcss": "^0.3.0",
-    "slice-machine-ui": "^1.1.0"
+    "slice-machine-ui": "^1.1.1"
   },
   "config": {
     "commitizen": {
